Chapter 4 second correction

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -463,3 +463,14 @@
   pages={1--15},
   year={2009}
 }
+
+
+
+
+
+@book{hubbard2015vector,
+  title={Vector calculus, linear algebra, and differential forms: a unified approach},
+  author={Hubbard, John H and Hubbard, Barbara Burke},
+  year={2015},
+  publisher={Matrix Editions}
+}
